# ParticlesNDK

./: .gitignore  CMakeLists.txt  CMakeSettings.json
src/: Build-android - Cópia.bat  CMakeLists.txt  particles_EffekseerCoreJNI.cpp
src/jni/: Android.mk  Application_arm64-v8a.mk  Application_armeabi-v7a.mk  Application_x86.mk  Application_x86_64.mk
src/lib/: CMakeLists.txt  EffekseerBackendCore.cpp  EffekseerBackendCore.h  EffekseerEffectCore.cpp  EffekseerEffectCore.h  EffekseerManagerCore.cpp  EffekseerManagerCore.h  EffekseerSettingCore.cpp  EffekseerSettingCore.h  Vector4Map.cpp  Vector4Map.h  distotion.cpp  distotion.h
